fixed home page on Firefox

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -48,6 +48,7 @@ header#main-header {
 
 		ul {
 
+			margin: 0px;
 			&:after {
 				content: ""; 
 				clear: both; 
